precompiles/utils/macro/tests/precompile/compile-fail/fn-modifiers/pre-check-multiple.stderr
error: The pre_check attribute must be the only precompile attribute of a function
  --> tests/precompile/compile-fail/fn-modifiers/pre-check-multiple.rs:21:16
   |
21 |     #[precompile::pre_check]
   |                   ^^^^^^^^^
